--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,12 +7,12 @@
 <body>
 <form action="./api/clues" method="post" class="form-example">
     <div class="form-field">
-        <label for="clue-text">Clue:</label>
-        <input type="text" id="clue-text" required>
+        <label for="text">Clue:</label>
+        <input type="text" id="text" name="text" required>
     </div>
     <div class="form-field">
-        <label for="clue-answer">Answer:</label>
-        <input type="text" id="clue-answer" required>
+        <label for="answer">Answer:</label>
+        <input type="text" id="answer" name="answer" required>
     </div>
     <div class="form-submit">
         <input type="submit" value="Submit clue">
