controller and path change

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Crossword clue submission</title>
 </head>
 <body>
-<form action="./api/clues" method="post" class="form-example">
+<form action="/clues" method="post" class="form-example">
     <div class="form-field">
         <label for="text">Clue:</label>
         <input type="text" id="text" name="text" required>
