--- a/src/main/resources/static/create-new-crossword.html
+++ b/src/main/resources/static/create-new-crossword.html
@@ -5,10 +5,10 @@
     <title>Create a new crossword</title>
 </head>
 <body>
-<form action="./api/crosswords" method="post">
+<form action="/crosswords" method="post">
     <div class="form-field">
         <label for="size">Grid Size:</label>
-        <input type="number" id="size" required>
+        <input type="number" id="size" name="size" required>
     </div>
     <div class="form-submit">
         <input type="submit" value="Create crossword">
