--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Crossword clue submission</title>
+    <title>Index Page</title>
 </head>
 <body>
-<form action="/clues" method="post" class="form-example">
-    <div class="form-field">
-        <label for="text">Clue:</label>
-        <input type="text" id="text" name="text" required>
-    </div>
-    <div class="form-field">
-        <label for="answer">Answer:</label>
-        <input type="text" id="answer" name="answer" required>
-    </div>
-    <div class="form-submit">
-        <input type="submit" value="Submit clue">
-    </div>
-</form>
+<div>This is an index page</div>
 
 </body>
 </html>
