Link to clue submit page from index

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,9 @@
     <title>Index Page</title>
 </head>
 <body>
-<div>This is an index page</div>
+<div>Welcome to the crossword maker!</div>
+
+<a href="/clues/submit">Submit a clue</a>
 
 </body>
 </html>
